# customer-prediction

./: .gitignore  LICENSE.md  README.md  eda.ipynb  feature.ipynb  pyproject.toml
