[project]
name = "customer-prediction"
version = "0.0.1"
description = "Code related to workshop on customer prediction"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "notebook==7.4.5",
    "ruff==0.12.12",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
]

