[project]
name = "customer-prediction"
version = "0.0.1"
description = "Code related to workshop on customer prediction"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "ipywidgets==8.1.7",
    "kmodes==0.12.2",
    "lightgbm==4.6.0",
    "matplotlib==3.10.6",
    "notebook==7.4.5",
    "pandas==2.3.2",
    "ruff==0.12.12",
    "scikit-learn==1.7.1",
    "seaborn==0.13.2",
    "shap==0.48.0",
    "yellowbrick==1.5",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "UP",
    "B",
    "I",
]

